--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview",
 		"tunn": "ngrok http 8080 --bind-tls false --host-header localhost:8080"
 	},
 	"dependencies": {
@@ -13,17 +14,13 @@
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/vue-fontawesome": "^3.0.0-5",
 		"@highlightjs/vue-plugin": "^2.1.0",
-		"core-js": "^3.8.3",
+		"@vitejs/plugin-vue": "^3.2.0",
 		"highlight.js": "^11.5.1",
+		"sass": "^1.55.0",
+		"vite": "^3.1.8",
 		"vue": "^3.2.13",
 		"vue-router": "^4.0.3",
-		"vue3-carousel": "^0.1.38"
+		"vue3-carousel": "^0.2.4"
 	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "~5.0.0",
-		"@vue/cli-plugin-router": "~5.0.0",
-		"@vue/cli-service": "~5.0.0",
-		"sass": "^1.32.7",
-		"sass-loader": "^12.0.0"
-	}
+	"devDependencies": {}
 }
